outline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outline
  labels:
    name: outline
