outline/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-external
  namespace: outline
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - outline.shion1305.com
  rules:
    - backendRefs:
        - name: outline
          port: 80
